--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>FACET Project</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>This will hold information about the FACET project.</p>
 </body>
 </html>
